Programming languages and paradigms/Interpreter/examples/bad/undefined.ho
func main() {
    print(x, "\n"); // error:2:11: undefined: x
}